<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5D6A7"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="45dp"
        android:background="#6186AF"
        android:text="@string/name_with_space"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popularity"
        android:background="#FF9900"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/popularity_bar"
        style="@android:style/Widget.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="5dp"
        android:progress="50" />
    <EditText
        android:id="@+id/popularity_text"
        android:inputType="number"
        android:text="@string/fifty"
        android:layout_width="50dp"

        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Similarity"
        android:background="#FF9900"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/similarity_bar"
        style="@android:style/Widget.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="5dp"
        android:progress="50" />
    <EditText
        android:id="@+id/similarity_text"
        android:inputType="number"
        android:layout_width="50dp"
        android:text="@string/fifty"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blacklist"
        android:background="#000000"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/blacklist_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions_for_blacklist"
        android:textSize="15sp"
        android:inputType="text"/>

    <Button
        android:id="@+id/final_generate_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="#009D10"
        android:text="@string/generate"
        android:textColor="#ffffff" />


</LinearLayout>
